[package]
name = "opencv"
version = "0.1.0"
authors = ["Andrey Yaromenok/PC <ayaromenok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.23", default-features = false, features = ["opencv-41"]}